--- a/votingapp/templates/voting-app-deploy.yaml
+++ b/votingapp/templates/voting-app-deploy.yaml
@@ -3,17 +3,17 @@ kind: Deployment
 metadata:
   name: {{ .Values.deployment.name }}
   labels:
-    {{- include "selectorLabels" . | nindent 4 }}
+    {{- include "selectorLabels" . | indent 4 }}
 spec:
   replicas: {{ .Values.deployment.replicaCount }}
   selector:
     matchLabels:
-      {{- include "selectorLabels" . | nindent 6 }}
+      {{- include "selectorLabels" . | indent 6 }}
   template:
     metadata:
       name: voting-app-pod
       labels:
-        {{- include "selectorLabels" . | nindent 8 }}
+        {{- include "selectorLabels" . | indent 8 }}
     spec:
       containers:
         - name: voting-app
