--- a/votingapp/templates/voting-app-svc.yaml
+++ b/votingapp/templates/voting-app-svc.yaml
@@ -13,4 +13,4 @@ spec:
       name: http
       nodePort: {{ .Values.service.nodePort }}
   selector:
-    {{- include "selectorLabels" . | nindent 4 }}
+    {{- include "selectorLabels" . | indent 4 }}
